--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -43,7 +43,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../img/hero/img_m@1x.jpg);
+      url(../img/hero/img_m@1x.jpg);
 
       @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
@@ -71,7 +71,7 @@
            background-image: linear-gradient(to right,
                rgba(47, 48, 58, 0.4),
                rgba(47, 48, 58, 0.4)),
-             url(../img/hero/img_l@2x.jpg);
+             url(../img/hero/Img_l@2x.jpg);
          }
   background-position: center;
   background-repeat: no-repeat;
