--- a/css/style.css
+++ b/css/style.css
@@ -685,7 +685,7 @@ img {
 
 /* Modal Window */
 
-.backdrop{
+/* .backdrop{
   position: fixed;
   top: 0;
   left: 0;
@@ -726,7 +726,7 @@ img {
 
 .modal.modal-animation{
   animation: swirl-in-fwd 0.6s both ease-out;
-}
+} */
 
 /* .backdrop.is-hidden .modal{
   opacity: 0;
