--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,161 +1,149 @@
 .menu {
-    display: flex;
-    padding: 0;
-    margin: 0;
-    list-style: none;
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
 @media (max-width: 767px) {
-    .menu {
-        display: none;
-    }
+  .menu {
+    display: none;
+  }
 }
 
 .menu .link {
-    padding: 10px;
-    color: inherit;
-    text-decoration: none;
+  padding: 10px;
+  color: inherit;
+  text-decoration: none;
 }
 
 .menu .link:hover,
 .menu .link:focus {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .menu-toggle {
-    min-height: 40px;
-    min-width: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  min-height: 40px;
+  min-width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    margin-left: auto;
-    padding: 0;
-    background-color: transparent;
-    color: #212121;
-    cursor: pointer;
-    border: none;
-    border-radius: 50%;
-    outline: none;
+  margin-left: auto;
+  padding: 0;
+  background-color: transparent;
+  color: #212121;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  outline: none;
 }
 
 @media (min-width: 768px) {
-    .menu-toggle {
-        display: none;
-    }
+  .menu-toggle {
+    display: none;
+  }
 }
 
 .menu-toggle:hover,
 .menu-toggle:focus {
-    background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .menu-container {
-    position: fixed;
-    top: 0;
-    left: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
 
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-    width: 100vw;
-    height: 100vh;
-    padding: 32px;
-    background-color: #ffffff;
-    z-index: 999;
+  width: 100vw;
+  height: 100vh;
+  padding: 32px;
+  background-color: #ffffff;
+  z-index: 999;
 
-    transform: translateX(100%);
-    transition: transform 250ms ease-in-out;
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
 }
 
 .menu-container.is-open {
-    transform: translateX(0);
+  transform: translateX(0);
 }
 
-
-
 .menu-container .menu-toggle {
-    position: absolute;
-    top: 16px;
-    right: 16px;
-    color: #212121;
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  color: #212121;
 }
 
 .mobile-menu {
-    padding: 0;
-    margin: 0;
-    list-style: none;
+  padding: 0;
+  margin: 0;
+  list-style: none;
 
-    margin-bottom: auto;
+  margin-bottom: auto;
 }
 
 .mobile-menu .link {
-    font-weight: 500;
-        font-size: 40px;
-        line-height: calc(47 / 40);
-        letter-spacing: 0.02em;
-    display: block;
-    padding: 10px;
-    color: #212121;
-    text-decoration: none;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: calc(47 / 40);
+  letter-spacing: 0.02em;
+  display: block;
+  padding: 10px;
+  color: #212121;
+  text-decoration: none;
 }
 
-.mobile-tel-link{
-    font-weight: 500;
-        font-size: 34px;
-        line-height: 40px;
-    
-        letter-spacing: 0.02em;
-    
-        color: #2196F3;
+.mobile-menu .link.current {
+  color: var(--accent-color);
+}
+
+.mobile-tel-link {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 40px;
+
+  letter-spacing: 0.02em;
+
+  color: #2196f3;
 }
 
 .mobile-mail-link {
-font-weight: 500;
-    font-size: 24px;
-    line-height: calc(28 / 24);
-    letter-spacing: 0.02em;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: calc(28 / 24);
+  letter-spacing: 0.02em;
 
-    color: #757575;
+  color: #757575;
 }
 
-.mobile-contacts-item:nth-child(1){
-margin-bottom: 32px;
+.mobile-contacts-item:nth-child(1) {
+  margin-bottom: 32px;
 }
 
-.mobile-contacts{
-    margin-bottom: 64px;
+.mobile-contacts {
+  margin-bottom: 64px;
 }
 
 .mobile-socials {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
 }
 
-.mobile-social-link{
-    font-weight: 500;
-        font-size: 18px;
-        line-height: 22px;
-    
-        letter-spacing: 0.02em;
-    
-        color: #2196F3;
+.mobile-social-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
 
+  letter-spacing: 0.02em;
+
+  color: #2196f3;
 }
-.mobile-social-link::after{
-    content: '';
-    margin-left: 10px;
-    width: 22px;
-        height: 0px;
-        left: 135px;
-        top: 726px;
-    
-        border: 1px solid rgba(33, 33, 33, 0.2);
-        transform: rotate(90deg);
-
-        &::after:last-child{
-           content: '';
-            display: none;
-        }
+.mobile-socials-item:not(:last-child) {
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
-
