--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -18,22 +18,40 @@
 }
 
 .modal {
-    position: absolute;
 
-    top: 50%;
-    left: 50%;
-    padding: 40px;
 
-    transform: translateX(-50%) translateY(-50%);
+        position: absolute;
+    
+        top: 50%;
+        left: 50%;
+        padding: 40px;
+    
+        transform: translateX(-50%) translateY(-50%);
+    
+      
+        min-height: 581px;
+        background-color: var(--main-title-color);
+    
+        border-radius: 4px;
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+    
+        transition: transform 300ms opacity 300ms;
 
-    width: 528px;
-    min-height: 581px;
-    background-color: var(--main-title-color);
 
-    border-radius: 4px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-
-    transition: transform 300ms opacity 300ms;
+        @media screen and (max-width: 479px) {
+                padding: 40px 10px;
+            }
+        
+            @media screen and (min-width: 480px) {
+                width: 450px;
+            }
+        
+            @media screen and (min-width: 1200px) {
+                width: 528px;
+            }
+        
 
 }
 
@@ -210,14 +228,30 @@
 
 .modal-form-agreement-desc {
     font-weight: 400;
-    font-size: 14px;
-    line-height: 24px;
+    
 
     letter-spacing: 0.03em;
 
     user-select: none;
 
     color: #757575;
+
+    @media screen and (max-width: 479px) {
+        font-size: 12px;
+            line-height: 14px;
+        }
+    
+        @media screen and (min-width: 480px) {
+            font-size: 12px;
+                line-height: 14px;
+        }
+
+                @media screen and (min-width: 1200px) {
+                    font-size: 14px;
+                        line-height: 24px;
+                }
+    
+       
 }
 
 .modal-form-checkbox {
