--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -39,23 +39,41 @@
 }
 
 .clients__list {
-    @media screen and (min-width: 480px) {
-        display: flex;
-         flex-wrap: wrap;
-        gap: 30px;
-    }
+    display: flex;
+        flex-wrap: wrap;
+        margin-bottom: calc(-1 * 30px);
+        margin-left: calc(-1 * 30px);
+    // @media screen and (min-width: 480px) {
+    //     display: flex;
+    //      flex-wrap: wrap;
+    //     gap: 30px;
+    // }
     
-        @media screen and (min-width: 768px) {
-            display: flex;
-                 flex-wrap: wrap;
-                gap: 30px;
-        }
+    //     @media screen and (min-width: 768px) {
+    //         display: flex;
+    //              flex-wrap: wrap;
+    //             gap: 30px;
+    //     }
     
-        @media screen and (min-width: 1200px) {
-            display: flex;
-            gap: 30px;
-        }
+    //     @media screen and (min-width: 1200px) {
+    //         display: flex;
+    //         gap: 30px;
+    //     }
    
+}
+
+.clients__item{
+flex-basis: calc((100% - 2 * 30px) / 2);
+    margin-left: 30px;
+    margin-bottom: 30px;
+
+    @media screen and (min-width: 768px) {
+        flex-basis: calc((100% - 3 * 30px) / 3);
+    }
+
+    @media screen and (min-width: 1200px) {
+        flex-basis: calc((100% - 6 * 30px) / 6);
+    }
 }
 
 .clients__link {
@@ -79,17 +97,17 @@
     border-radius: 4px;
     }
 
-         @media screen and (min-width: 480px) {
-        width: 210px;
-         }
+        //  @media screen and (min-width: 480px) {
+        // width: 210px;
+        //  }
     
-         @media screen and (min-width: 768px) {
-            width: 226px;
-         }
+        //  @media screen and (min-width: 768px) {
+        //     width: 226px;
+        //  }
     
-         @media screen and (min-width: 1200px) {
-            width: 170px;
-         }
+        //  @media screen and (min-width: 1200px) {
+        //     width: 170px;
+        //  }
 }
 
 .clients__icon {
