--- a/sass/components/_staff.scss
+++ b/sass/components/_staff.scss
@@ -24,43 +24,66 @@
 }
 
 .staff__list {
-  @media screen and (min-width: 480px) {
-  }
-  @media screen and (max-width: 786px) {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  @media screen and (min-width: 1200px) {
-    display: flex;
-    margin-left: calc(-1 * var(--card-set-gap));
-  }
+  @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+      margin-bottom: calc(-1 * 30px);
+      margin-left: calc(-1 * 30px);
+    }
+  // @media screen and (min-width: 480px) {
+  // }
+  // @media screen and (max-width: 786px) {
+  //   display: flex;
+  //   flex-wrap: wrap;
+  //   justify-content: center;
+  // }
+  // @media screen and (min-width: 1200px) {
+  //   display: flex;
+  //   margin-left: calc(-1 * var(--card-set-gap));
+  // }
 }
 
 .staff__card {
   
-  margin-bottom: var(--card-set-gap);
-  flex-basis: calc(100% / 4 - var(--card-set-gap));
+  // margin-bottom: var(--card-set-gap);
+  // flex-basis: calc(100% / 4 - var(--card-set-gap));
   background-color: var(--main-title-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-  @media screen and (min-width: 480px) {
-    width: 100%;
-    flex-basis: calc(100% / 2 - var(--card-set-gap));
-    margin-left: 0;
-  }
+    @media screen and (max-width: 767px) {
+        width: 100%;
+    
+        &:not(:last-child) {
+          margin-bottom: 30px;
+        }
+      }
+    
+      @media screen and (min-width: 768px) {
+        flex-basis: calc((100% - 2 * 30px) / 2);
+        margin-left: 30px;
+        margin-bottom: 30px ;
+      }
+    
+      @media screen and (min-width: 1200px) {
+        flex-basis: calc((100% - 4 * 30px) / 4);
+      }
+  // @media screen and (min-width: 480px) {
+  //   width: 100%;
+  //   flex-basis: calc(100% / 2 - var(--card-set-gap));
+  //   margin-left: 0;
+  // }
 
-  @media screen and (max-width: 786px) {
-    flex-basis: calc(100% / 2 - var(--card-set-gap));
-    margin-left: var(--card-set-gap);
-    &:nth-child(2n + 1) {
-      margin-left: 0;
-    }
-  }
+  // @media screen and (max-width: 786px) {
+  //   flex-basis: calc(100% / 2 - var(--card-set-gap));
+  //   margin-left: var(--card-set-gap);
+  //   &:nth-child(2n + 1) {
+  //     margin-left: 0;
+  //   }
+  // }
 
-  @media screen and (min-width: 1200px) {
-    margin-left: var(--card-set-gap);
-  }
+  // @media screen and (min-width: 1200px) {
+  //   margin-left: var(--card-set-gap);
+  // }
 }
 
 .staff__wrapper {
