--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -39,38 +39,63 @@
 }
 
 .benefits__card {
-  margin-left: var(--card-set-gap);
-  margin-bottom: var(--card-set-gap);
-  flex-basis: calc(100% / 4 - var(--card-set-gap));
-  
-  @media screen and (max-width: 480px) {
-
-    margin-left: 0;
-  }
-  @media screen and (max-width: 768px) {
-
-    &:nth-child(2n + 1) {
-      margin-left: 0;
+  @media screen and (min-width: 768px) {
+      margin-bottom: 30px;
+      flex-basis: calc((100% - 2 * 30px) / 2);
+      margin-left: 30px;
     }
-  }
-  @media screen and (min-width: 1200px) {
-    margin-bottom: 0;
-  }
+  
+    @media screen and (min-width: 1200px) {
+      flex-basis: calc((100% - 4 * 30px) / 4);
+    }
+  
+    @media screen and (max-width: 767px) {
+      &:not(:last-child) {
+        margin-bottom: 30px;
+      }
+    }
+  // margin-left: var(--card-set-gap);
+  // margin-bottom: var(--card-set-gap);
+  // flex-basis: calc(100% / 4 - var(--card-set-gap));
+  
+  // @media screen and (max-width: 480px) {
+
+  //   margin-left: 0;
+  // }
+  // @media screen and (max-width: 768px) {
+
+  //   &:nth-child(2n + 1) {
+  //     margin-left: 0;
+  //   }
+  // }
+  // @media screen and (min-width: 1200px) {
+  //   margin-bottom: 0;
+  // }
 }
 
 .benefits__list {
-  @media screen and (min-width: 480px) {
-    //  margin-left: calc(-1 * var(--card-set-gap));
-  }
-  @media screen and (min-width: 768px) {
-    display: flex;
-    flex-wrap: wrap;
-    //  margin-left: calc(-1 * var(--card-set-gap));
-  }
-  @media screen and (min-width: 1200px) {
-    display: flex;
-    margin-left: calc(-1 * var(--card-set-gap));
-  }
+    @media screen and (max-width: 767px) {
+        width: 100%;
+      }
+    
+      @media screen and (min-width: 768px) {
+        display: flex;
+        flex-wrap: wrap;
+        margin-bottom: calc(-1 * 30px);
+        margin-left: calc(-1 * 30px);
+      }
+  // @media screen and (min-width: 480px) {
+  //   //  margin-left: calc(-1 * var(--card-set-gap));
+  // }
+  // @media screen and (min-width: 768px) {
+  //   display: flex;
+  //   flex-wrap: wrap;
+  //   //  margin-left: calc(-1 * var(--card-set-gap));
+  // }
+  // @media screen and (min-width: 1200px) {
+  //   display: flex;
+  //   margin-left: calc(-1 * var(--card-set-gap));
+  // }
 }
 
 .benefits__title {
